@@ -4,6 +4,7 @@ if DECT.ENABLED["landscaping"] then
 
 	local base_tiles = DECT.CONFIG.BASE_TILES
 	local water_tiles = DECT.CONFIG.BASE_WATER_TILES
+	local base_trees = DECT.CONFIG.BASE_TREES
 	local base_rocks = DECT.CONFIG.BASE_ROCKS
 
 	-- Create new landscaping recipes for base ground tiles
@@ -46,6 +47,24 @@ if DECT.ENABLED["landscaping"] then
 				}
 			})
 		end
+	end
+
+	-- Create new landscaping recipes for base trees
+	for _, tree in pairs(base_trees) do
+		data:extend({
+			{
+				type = "recipe",
+				name = "dect-base-"..tree,
+				energy_required = 2,
+				enabled = false,
+				category = "crafting",
+				ingredients = {
+					{ data.raw["tree"][tree].minable.result, data.raw["tree"][tree].minable.count * 1.5 }
+				},
+				result = "dect-base-"..tree,
+				result_count = 1
+			}
+		})
 	end
 
 	-- Create new landscaping recipes for base rock decoratives
