@@ -4,6 +4,7 @@ if DECT.ENABLED["landscaping"] then
 
 	local base_tiles = DECT.CONFIG.BASE_TILES
 	local water_tiles = DECT.CONFIG.BASE_WATER_TILES
+	local base_trees = DECT.CONFIG.BASE_TREES
 	local base_rocks = DECT.CONFIG.BASE_ROCKS
 
 	-- Add new Landscaping technoogy
@@ -11,6 +12,11 @@ if DECT.ENABLED["landscaping"] then
 	for _, tile in pairs(base_tiles) do
 		if data.raw["tile"][tile] then
 			table.insert(landscaping_effects, {type = "unlock-recipe", recipe = "dect-base-"..tile})
+		end
+	end
+	for _, tree in pairs(base_trees) do
+		if data.raw["tree"][tree] then
+			table.insert(landscaping_effects, {type = "unlock-recipe", recipe = "dect-base-"..tree})
 		end
 	end
 	for _, rock in pairs(base_rocks) do
